--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@oanda/v20": "3.0.25-0",
         "@stoqey/ib": "^1.3.26",
         "dotenv": "^16.4.5",
+        "rxjs": "^7.8.1",
         "ws": "^8.18.0"
     },
     "devDependencies": {
